[gd_scene load_steps=5 format=3 uid="uid://jwxt30xuwsct"]

[ext_resource type="Script" path="res://src/prop/Projectile/EnergyBall/EnergyBall.gd" id="1_o80rj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gc6qa"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_xrhba"]
radius = 0.25
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_3urjr"]
radius = 0.3

[node name="EnergyBall" type="Area3D"]
top_level = true
collision_layer = 64
collision_mask = 19
script = ExtResource("1_o80rj")
target_type = 1
DAMAGE = 1
MAX_SPEED = 15

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_gc6qa")
mesh = SubResource("SphereMesh_xrhba")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3urjr")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_timeout"]
